--- a/em-out/style.css
+++ b/em-out/style.css
@@ -102,7 +102,8 @@ canvas.emscripten { border: 0px none; }
 
 #viewer {
   position:relative;
-  cursor: ew-resize;
+  /* cursor: ew-resize; */
+  cursor: none;
 }
 
 
@@ -122,7 +123,7 @@ canvas.emscripten { border: 0px none; }
   top:0;
   right:0;
   width:50%;
-  border-left:2px solid rgba(250, 250, 0, 0.5);
+  border-left:2px solid rgba(250, 250, 0, 0.3);
 
 }
 
@@ -132,5 +133,19 @@ canvas.emscripten { border: 0px none; }
   right:0;
 }
 
-div.emscripten_border { width: 500px }
+#left-info, #right-info {
+  position: absolute;
+  top: 0px;
+  opacity: 0.6;
+  background: rgba(250, 250, 250, 0.5);
+  padding: .3em;
+  margin: .3em;
+}
 
+#left-info {
+  right: 0px;
+}
+
+#right-info {
+  left: 0px;
+}
