--- a/em-out/style.css
+++ b/em-out/style.css
@@ -10,7 +10,7 @@ body {
 
 .emscripten { padding-right: 0; margin-left: auto; margin-right: auto; display: block; }
 div.emscripten { text-align: center; }      
-div.emscripten_border { border: 1px solid lightgrey; padding: 1em; margin: 0 auto;}
+div.emscripten_border { border: 1px solid lightgrey; padding: 1em; margin: 1em auto;}
 /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
 canvas.emscripten { border: 0px none; }
 
@@ -123,8 +123,7 @@ canvas.emscripten { border: 0px none; }
   top:0;
   right:0;
   width:50%;
-  border-left:2px solid rgba(250, 250, 0, 0.3);
-
+  border-left: 1px solid rgba(200, 200, 0, 0.7);
 }
 
 #viewer-right .wrapper {
@@ -136,16 +135,39 @@ canvas.emscripten { border: 0px none; }
 #left-info, #right-info {
   position: absolute;
   top: 0px;
-  opacity: 0.6;
-  background: rgba(250, 250, 250, 0.5);
+  /* opacity: 0.7; */
+  background: rgba(250, 250, 250, 0.7);
   padding: .3em;
   margin: .3em;
 }
 
+#left-info p, #right-info p {
+  margin: 0;
+}
+
+#left-info p.size, #right-info p.size {
+  font-size:0.8em;
+  font-style: italic;
+  color: #222;
+}
+
 #left-info {
   right: 0px;
+  text-align:right;
 }
 
 #right-info {
   left: 0px;
+  text-align:left;
+}
+
+.inputGroup {
+  display: inline-block;
+  border-right:1px dotted grey;
+  padding-left:1em;
+  padding-right:1em;
+}
+
+.inputGroup label {
+  display: block;
 }
