--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .emscripten { padding-right: 0; margin-left: auto; margin-right: auto; display: block; }
 div.emscripten { text-align: center; }      
-div.emscripten_border { border: 1px solid lightgrey; padding: 1em; }
+div.emscripten_border { border: 1px solid lightgrey; padding: 1em; margin: 1em auto;}
 /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
 canvas.emscripten { border: 0px none; }
 
@@ -92,10 +92,82 @@ canvas.emscripten { border: 0px none; }
 .closeButton {text-align: right; margin:0;}
 
 #controls .header {padding: 0em; font-weight: bold; font-size: 1.5em; border-right:1px dotted grey; padding-right:.5em;}
-#controls .header input[type=button] { background: lightgrey; border:none}
-#controls .header a {color: black; text-decoration: none; border-bottom:1px dotted grey}
-#controls .header .subdued {color: grey;}
+#controls .header input[type=button] { background: #ddd; border:none; border-radius:.3em;}
+#controls .header a {color: #76b45a; text-decoration: none; border-bottom:1px dotted #76b45a}
+#controls .header .subdued {color: #999;}
 #credits { text-align: center }
 #credits a { color: grey }
-#controls label { color: grey }
+#controls label { color: grey; padding-bottom: .1em; }
 
+
+#viewer {
+  position:relative;
+  /* cursor: ew-resize; */
+  cursor: none;
+}
+
+
+#viewer-left, #viewer-right {
+  overflow:hidden;
+}
+
+#viewer-left {
+  position:absolute;
+  top:0;
+  left:0;
+  width:50%;
+}
+
+#viewer-right {
+  position:absolute;
+  top:0;
+  right:0;
+  width:50%;
+  border-left: 1px solid rgba(200, 200, 0, 0.7);
+}
+
+#viewer-right .wrapper {
+  position:absolute;
+  top:0;
+  right:0;
+}
+
+#left-info, #right-info {
+  position: absolute;
+  top: 0px;
+  /* opacity: 0.7; */
+  background: rgba(250, 250, 250, 0.7);
+  padding: .3em;
+  margin: .3em;
+}
+
+#left-info p, #right-info p {
+  margin: 0;
+}
+
+#left-info p.size, #right-info p.size {
+  font-size:0.8em;
+  font-style: italic;
+  color: #222;
+}
+
+#left-info {
+  right: 0px;
+  text-align:right;
+}
+
+#right-info {
+  left: 0px;
+  text-align:left;
+}
+
+.inputGroup {
+  display: inline-block;
+  border-right:1px dotted grey;
+  padding-left:1em;
+  padding-right:1em;
+}
+
+.inputGroup label {
+  display: block;
+}
